# agent-memory-protocol

./: .gitignore  LICENSE  README.md  ralph.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rfc.md
docs/: api-reference.md  devto-tags.md  faq.md  getting-started.md  hn-submission.md  launch-checklist.md  mkdocs.yml  spec-explained.md
docs/blog/: launch-post.md
examples/mcp-claude-desktop/: mcp_config.json
examples/multi-agent-demo/: SCENARIO.md  agent_a.py  agent_b.py  agent_c.py  run_demo.py
sdk/: README.md  pyproject.toml
sdk/amp_client/: __init__.py  async_client.py  client.py  exceptions.py
sdk/amp_client/integrations/: __init__.py  langchain.py
sdk/examples/: langchain_example.py
sdk/python/amp/: client.py
sdk/python/tests/: test_async_client.py  test_client.py
server/: Dockerfile  docker-compose.yml  pyproject.toml
server/amp_server/: access_control.py  lifecycle.py  main.py  mcp_server.py  models.py
server/amp_server/storage/: __init__.py  base.py  chroma.py
server/tests/: conftest.py  test_access_control.py  test_lifecycle.py  test_mcp_tools.py  test_memory_crud.py
spec/v0.1.0/: lifecycle.md  memory-cell.schema.json
