[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amp-server"
version = "0.1.0"
description = "Reference implementation of the AMP (Agent Memory Protocol) server"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "chromadb>=0.5.0",
    "python-ulid>=2.2.0",
    "apscheduler>=3.10.0",
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
amp-server = "amp_server.main:app"
amp-mcp = "amp_server.mcp_server:main"

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
asyncio_mode = "auto"
